--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	editor = vim
-	excludesfile = ~/codes/settings/.gitignore
+	excludesfile = ~/repositories/settings/.gitignore
 	autocrlf = input
 [user]
 	email = tadatoshi.tokutake@gmail.com
