Generate ssh key

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,6 @@ Host *
 
 Host github
   HostName github.com
-  IdentityFile ~/.ssh/id_rsa
+  IdentityFile ~/.ssh/id_ed25519
   IdentitiesOnly yes
   User git
